// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/toolbar => should not render edit (except Back button) on touch devices 1`] = `
<div
  class="note-toolbar"
>
  <div
    class="note-toolbar__side note-toolbar__side_left"
  >
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_back"
      disabled="false"
      size="m"
      view="clear"
    />
  </div>
  <div
    class="note-toolbar__side note-toolbar__side_right"
  >
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_pin"
      size="m"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_delete"
      size="m"
      view="clear"
    />
  </div>
</div>
`;

exports[`components/toolbar => should not render upload button if there\`s no selected note 1`] = `
<div
  class="note-toolbar"
>
  <div
    class="note-toolbar__side note-toolbar__side_left"
  >
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_bold"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_italic"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_underline"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_strikethrough"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_list"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
  </div>
  <div
    class="note-toolbar__side note-toolbar__side_right"
  />
</div>
`;

exports[`components/toolbar => should render edit (with Back button) and groupped control buttons in mobile layout 1`] = `
<div
  class="note-toolbar"
>
  <div
    class="note-toolbar__side note-toolbar__side_left"
  >
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_back"
      disabled="false"
      size="s"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_bold"
      disabled="false"
      size="s"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_italic"
      disabled="false"
      size="s"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_underline"
      disabled="false"
      size="s"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_strikethrough"
      disabled="false"
      size="s"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_list"
      disabled="false"
      size="s"
      type="check"
      view="clear"
    />
    <lego-components_button
      as="span"
      classname="upload-button upload-button_without-text note-toolbar__button note-toolbar__button_attach"
      size="s"
      view="clear"
    >
      <div
        class="upload-button__attach-wrapper"
      >
        <input
          accept=".jpg,.jpeg,.gif,.png,.bmp"
          class="upload-button__attach"
          multiple=""
          type="file"
        />
      </div>
    </lego-components_button>
  </div>
  <div
    class="note-toolbar__side note-toolbar__side_right"
  />
</div>
`;

exports[`components/toolbar => should render edit (without Back button) and groupped control buttons by default 1`] = `
<div
  class="note-toolbar"
>
  <div
    class="note-toolbar__side note-toolbar__side_left"
  >
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_bold"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_italic"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_underline"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_strikethrough"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      classname="note-toolbar__button note-toolbar__button_list"
      disabled="false"
      size="m"
      type="check"
      view="clear"
    />
    <lego-components_button
      as="span"
      classname="upload-button upload-button_without-text note-toolbar__button note-toolbar__button_attach"
      size="m"
      view="clear"
    >
      <div
        class="upload-button__attach-wrapper"
      >
        <input
          accept=".jpg,.jpeg,.gif,.png,.bmp"
          class="upload-button__attach"
          multiple=""
          type="file"
        />
      </div>
    </lego-components_button>
  </div>
  <div
    class="note-toolbar__side note-toolbar__side_right"
  />
</div>
`;
